--- a/bookstore/package.json
+++ b/bookstore/package.json
@@ -6,5 +6,8 @@
   "repository": "<Add your repository here>",
   "devDependencies": {
     "@sap/cds-dk": "^8.6.0"
+  },
+  "dependencies": {
+    "@sap/capire-products": "file:sap-capire-products-1.0.0.tgz"
   }
 }
